@@ -10,6 +10,8 @@
 5. When getting categories from server, modify command parameters for album
    sort.
 6. Ensure A..Z splitting is not used for 'New Music' or 'Random Albums'
+7. Only show "i" icon in toolbar for now-playing if music and artist info
+   plugin is installed.
 
 0.0.8
 -----
